--- a/lab1/app/src/main/res/layout/content_main.xml
+++ b/lab1/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,16 @@
         android:layout_width="238dp"
         android:layout_height="108dp"
         android:text="Get current time"
-        tools:layout_editor_absoluteX="99dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="387dp" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="129dp"
+        android:layout_height="62dp"
+        android:text="Update time"
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="88dp" />
 </android.support.constraint.ConstraintLayout>
