--- a/Note/app/src/main/res/layout/activity_main.xml
+++ b/Note/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+    <CalendarView
+            android:layout_width="448dp"
+            android:layout_height="359dp"
+            android:id="@+id/mainCalendar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.513" app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageButton
+            android:layout_width="64dp"
+            android:layout_height="58dp" app:srcCompat="@android:drawable/ic_input_add"
+            android:id="@+id/addEventButton"
+            style="@style/Widget.AppCompat.Light.ActionButton"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="598dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="313dp"/>
+    <EditText
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/newNote" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="419dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/note" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="548dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:visibility="invisible"/>
+    <Button
+            android:text="Удалить"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/deleteButton" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="544dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="272dp" android:visibility="invisible"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+            android:text="Ваши заметки"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="498dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="176dp"/>
 </android.support.constraint.ConstraintLayout>
