--- a/Contacts/app/src/main/res/layout/activity_main.xml
+++ b/Contacts/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/openNewContactButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="340dp"
+        android:layout_marginTop="28dp"
+        android:onClick="newContact"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        tools:theme="@android:style/ButtonBar" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="291dp"
+        android:layout_marginTop="28dp"
+        android:onClick="Delete"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
+
 </android.support.constraint.ConstraintLayout>
